--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "skipLibCheck": true,
-    "module": "ES2020",
+    "module": "commonjs",
     "target": "ES2020",
+    "skipLibCheck": true,
     "noImplicitAny": false,
     "moduleResolution": "node",
     "resolveJsonModule": true,
